# distributed_acoustic

./: .gitignore  README.md  download_output.txt  main.py  pyproject.toml  regenerate_fig8.py  tex_tail.txt
data/real/: DATA_SOURCES.md  check_data.py  download_data.py
examples/: analysis_real_data_report.py  process_real_data.py  quick_start.md
notebooks/: create_notebook.py  validate_notebooks.py  write_notebooks.py
output/: report_metrics.json
report/: compile_report.sh  das_co2_monitoring_report.tex
src/das_co2_monitoring/: __init__.py  data_loader.py  datasets.py  event_detection.py  federated.py  monitoring.py  optimization.py  preprocessing.py  visualization.py
tests/: test_real_data_pipeline.py
