[project]
name = "distributed-acoustic"
version = "0.1.0"
description = "Distributed Acoustic Sensing (DAS) data processing for CO2 storage monitoring"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "h5py>=3.8.0",
    "pandas>=2.0.0",
    "obspy>=1.4.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "ipykernel>=6.31.0",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
